@@ -194,6 +194,18 @@ ecore_wl_display_get(void)
    return _ecore_wl_disp->wl.display;
 }
 
+EAPI struct wl_list *
+ecore_wl_globals_get(void)
+{
+   return &(_ecore_wl_disp->globals);
+}
+
+EAPI struct wl_registry *
+ecore_wl_registry_get(void)
+{
+   return _ecore_wl_disp->wl.registry;
+}
+
 EAPI void
 ecore_wl_screen_size_get(int *w, int *h)
 {
@@ -377,6 +389,9 @@ _ecore_wl_cb_handle_global(void *data, struct wl_registry *registry, unsigned in
    ewd = data;
 
    global = malloc(sizeof(Ecore_Wl_Global));
+
+   memset(global, 0, sizeof(Ecore_Wl_Global));
+
    global->id = id;
    global->interface = strdup(interface);
    global->version = version;
