@@ -28,6 +28,13 @@ Additions:
        ecore_x_e_window_profile_change_send()
        ecore_x_e_window_profile_change_request_send()
        ecore_x_e_window_profile_change_done_send()
+    * ecore_wayland:
+     - Store global wayland interfaces in a globals list so wayland programs
+       can bind to other non-standard wayland protocol extensions.
+     - ecore_wl_globals_get()
+     - ecore_wl_registry_get()
+     - Add #ifdef __cplusplus to Ecore_Wayland.h so C++ programs can link to
+       and use the API.
     * ecore_evas:
      - ecore_evas_window_profile_supported_get()
      - ecore_evas_window_profile_set()
